package com.week7.Finance;

public interface Valuable {
    double getValue();
}
