package com.week7.exercise;

import java.lang.reflect.Array;
import java.util.ArrayList;

public abstract class  test {
    private String o;
    private String d;
    private int num;

    public test(String o, String d, int num) {
        this.o = o;
        this.d = d;
        this.num = num;
    }

    ArrayList<ab> abc = new ArrayList<ab>();
    ab a = abc.get(0);
}
