package com.week7.lambdaExercises;

public interface Hello {
    void sayHello( String name);
}
