package com.week7.lambdaExercises.appliedLambda;

public interface IntFilter {
    boolean filter(int number);
}
