package com.week7.lambdaExercises.appliedLambda;

public interface StringFilter {
    boolean filter(String text);
}
